[project]
name = "fabric-utilities"
version = "0.1.0"
description = "Python utilities for Microsoft Fabric - authentication, Delta Lake, and Parquet operations"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
    {name = "Mattias Thalén", email = "your.email@example.com"}
]
license = {text = "GPL-3.0"}
keywords = ["microsoft-fabric", "delta-lake", "parquet", "azure", "data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "azure-core==1.29.4",
    "azure-identity==1.17.1",
    "deltalake==0.18.2",
    "polars==1.6.0",
]

[project.urls]
Homepage = "https://github.com/mattiasthalen/fabric_utilities"
Repository = "https://github.com/mattiasthalen/fabric_utilities"
Issues = "https://github.com/mattiasthalen/fabric_utilities/issues"
