[project]
name = "fabric-utilities"
dynamic = ["version"]
description = "Python utilities for Microsoft Fabric - authentication, Delta Lake, and Parquet operations"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
    {name = "Mattias Thalén", email = "your.email@example.com"}
]
license = "GPL-3.0"
keywords = ["microsoft-fabric", "delta-lake", "parquet", "azure", "data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "azure-core==1.29.4",
    "azure-identity==1.17.1",
    "deltalake>=1.2.1",
    "polars>=1.34.0",
    "polars-hash>=0.5.5",
    "setuptools-scm>=9.2.2",
]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project.urls]
Homepage = "https://github.com/mattiasthalen/fabric_utilities"
Repository = "https://github.com/mattiasthalen/fabric_utilities"
Issues = "https://github.com/mattiasthalen/fabric_utilities/issues"
